# pydanticrud

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: pull_request.yml
app/: exceptions.py  settings.py
app/backends/: dynamodb.py  sqlite.py
app/models/: base.py
pydanticrud/: __init__.py  base.py  dynamo_type_serializer.py  exceptions.py  main.py  settings.py
pydanticrud/backends/: dynamodb.py  opensearch.py  sqlite.py
tests/: random_values.py  test_dynamo_type_serializer.py  test_dynamo_type_serializers.py  test_dynamodb.py  test_model.py  test_opensearch.py  test_sqlite.py
