[tool.poetry]
name = "pydanticrud"
version = "0.1.0"
description = "Supercharge your Pydantic models with CRUD methods and a pluggable backend"
authors = ["Timothy Farrell <tim.farrell@rackspace.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6,<4"
boto3 = "^1.17.112"
rule-engine = "^3.2.0"
pydantic = "^1.8.2"
dataclasses = {version = "^0.8", python = "3.6"}
opensearch-py = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
docker = "^5.0.0"
black = "^21.6b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py36']
