[tool.poetry]
name = "pydanticrud"
version = "1.0.0"
description = "Supercharge your Pydantic models with CRUD methods and a pluggable backend"
authors = ["Timothy Farrell <tim.farrell@rackspace.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8"
boto3 = "^1.17.112"
rule-engine = "^3.2.0"
pydantic = "^2.5,"
dataclasses = {version = "^0.8", python = "3.6"}

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
docker = "^7.1.0"
black = "^21.6b0"

[tool.poetry.group.dev.dependencies]
docker = "7.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py38']
