[tool.poetry]
name = "pydanticrud"
version = "0.4.4"
description = "Supercharge your Pydantic models with CRUD methods and a pluggable backend"
authors = ["Timothy Farrell <tim.farrell@rackspace.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8"
boto3 = "^1.36.0"
rule-engine = "^4.5.3"
pydantic = "^1.8.2"
dataclasses = {version = "^0.8", python = "3.6"}

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
docker = "^5.0.0"
black = "^24.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py36']
